# quick-call-dspy

./: .dockerignore  .env.example  Dockerfile  README.md  app.py  compose.yml  main.py  pyproject.toml
signaturize/: __init__.py  signature_generator.py
